--- a/eCO2Tracker/eCO2Tracker.csproj
+++ b/eCO2Tracker/eCO2Tracker.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <None Include="..\.editorconfig" Link=".editorconfig" />
+    <None Include="Pages\Lifestyle\Index.cshtml" />
   </ItemGroup>
 
   <ItemGroup>
